--- a/crmProject/core/templates/core/base.html
+++ b/crmProject/core/templates/core/base.html
@@ -8,20 +8,39 @@
 </head>
 <body>
     <nav class="py-4 px-10 flex justify-between bg-indigo-400"> 
-        <a href="/" class="text-white">AhmedCRM</a>
+        <a href="/" class="text-white text-xl">AhmedCRM</a>
 
         <div class="space-x-1">
-            <a href="{% url 'about' %}" class="text-white px-6">About</a>
+            <a href="{% url 'about' %}" class="text-lg text-white px-3">About</a>
             {% if request.user.is_authenticated %}
-                <a href="{% url 'dashboard' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-white">Dashboard</a>
-                <a href="{% url 'index' %}" class="py-2 px-6 bg-red-500 rounded-lg text-white">Log Out</a>
+                <a href="{% url 'dashboard' %}" class="px-3 text-lg text-white">Dashboard</a>
+                <a href="{% url 'leads_list' %}" class="px-3 text-lg text-white">Leads</a>
+            {% endif %}
+            
+        </div>
+
+        <div class="space-x-1">
+            {% if request.user.is_authenticated %}
+                <a href="{% url 'index' %}" class="ml-16 py-2 px-6 bg-red-500 rounded-lg text-lg text-white">Log Out</a>
             {% else %}
-                <a href="{% url 'login' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-white">Log In</a>
-                <a href="{% url 'signup' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-white">Sign Up</a>
+                <a href="{% url 'login' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-lg text-white">Log In</a>
+                <a href="{% url 'signup' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-lg text-white">Sign Up</a>
             {% endif %}
             
         </div>
     </nav>
+
+    {% if messages %}
+        <div class="mt-5 flex items-center justify-center">
+            <div class="py-4 px-20 text-white bg-indigo-400 rounded-xl">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+        </div>
+    {% endif %}
+
+
 
     {% block content %}
     {% endblock %}
