--- a/crmProject/core/templates/core/base.html
+++ b/crmProject/core/templates/core/base.html
@@ -14,6 +14,7 @@
             <a href="{% url 'about' %}" class="text-lg text-white px-3">About</a>
             {% if request.user.is_authenticated %}
                 <a href="{% url 'dashboard' %}" class="px-3 text-lg text-white">Dashboard</a>
+                <a href="{% url 'clients_list' %}" class="px-3 text-lg text-white">Clients</a>
                 <a href="{% url 'leads_list' %}" class="px-3 text-lg text-white">Leads</a>
             {% endif %}
             
