--- a/crmProject/client/templates/client/clients_add.html
+++ b/crmProject/client/templates/client/clients_add.html
@@ -8,14 +8,19 @@
     <div class="py-4 px-10">
         <h1 class="text-xl">Add Client</h1>
 
-        <form method="post" action=".">
-            {% csrf_token %}
+        {% if team.plan.max_clients > team.clients.all|length %}
+            <form method="post" action=".">
+                {% csrf_token %}
 
-            {{ form.as_p }}  
-            
-            <button class="mt-5 py-2 px-6 rounded-lg bg-indigo-500 text-white">Submit</button>
-            <a href="{% url "clients_list" %}" class="ml-4 py-2 px-4 rounded-lg bg-green-500 text-white">Go back</a>
-        </form>
+                {{ form.as_p }}  
+                
+                <button class="mt-5 py-2 px-6 rounded-lg bg-indigo-500 text-white">Submit</button>
+                <a href="{% url "clients_list" %}" class="ml-4 py-2 px-4 rounded-lg bg-green-500 text-white">Go back</a>
+            </form>
+        {% else %}
+            <p class="mt-1 mb-5 py-2 text-red-500">Your team have reached maximum number of clients. Your owner must upgrade your plan!</p>
+            <a href="{% url "clients_list" %}" class="py-2 px-4 rounded-lg bg-green-500 text-white">Go back</a>
+        {% endif %}
 
     </div>
     
