--- a/crmProject/core/templates/core/base.html
+++ b/crmProject/core/templates/core/base.html
@@ -22,7 +22,7 @@
 
         <div class="space-x-1">
             {% if request.user.is_authenticated %}
-                <a href="{% url 'index' %}" class="ml-16 py-2 px-6 bg-red-500 rounded-lg text-lg text-white">Log Out</a>
+                <a href="{% url 'myaccount' %}" class="ml-16 py-2 px-6 bg-indigo-600 rounded-lg text-lg text-white">My Profile</a>
             {% else %}
                 <a href="{% url 'login' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-lg text-white">Log In</a>
                 <a href="{% url 'signup' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-lg text-white">Sign Up</a>
