--- a/crmProject/lead/templates/lead/lead_detail.html
+++ b/crmProject/lead/templates/lead/lead_detail.html
@@ -44,6 +44,28 @@
         <a href = "{% url 'leads:convert' lead.id %}" class="mr-5 py-2 px-3 rounded-lg bg-indigo-500 text-white"> Convert to client</a>
 
         <hr class="my-5">
+
+
+        <h2 class="text-xl">Comments</h2>
+
+        <div class="space-y-4 mb-5">
+            {% for comment in lead.comments.all %}
+                <div class="mt-5 bg-gray-100 py-6 px-5 rounded-xl">
+                    <p class = "mb-2"> <strong> {{ comment.created_by }} </strong> @{{ comment.created_at }}</p>
+                    {{ comment.content }}
+                </div>
+            {% endfor %}
+        </div>   
+
+        <form method="post" action="{% url 'leads:add_comment' lead.id %}">
+            {% csrf_token %}
+
+            {{ form.as_p }}
+
+            <button class="mr-5 py-2 px-3 rounded-lg bg-indigo-500 text-white"> Submit </button>
+        </form>
+
+        <hr class="my-5">
     
         <a href="{% url "leads:list" %}" class="py-2 px-3 rounded-lg bg-green-500 text-white">Go back</a>
     </div>
