--- a/crmProject/lead/templates/lead/lead_detail.html
+++ b/crmProject/lead/templates/lead/lead_detail.html
@@ -44,7 +44,7 @@
         <a href = "{% url 'leads:convert' lead.id %}" class="mr-5 py-2 px-3 rounded-lg bg-indigo-500 text-white"> Convert to client</a>
 
         <hr class="my-5">
-
+        <hr class="my-5">
 
         <h2 class="text-xl">Comments</h2>
 
@@ -64,6 +64,32 @@
 
             <button class="mr-5 py-2 px-3 rounded-lg bg-indigo-500 text-white"> Submit </button>
         </form>
+
+
+        <hr class="my-5">
+        <hr class="my-5">
+
+        <h2 class="text-xl mb-4">Files</h2>
+
+        <div class="space-y-4 mb-5">
+            {% for file in lead.files.all %}
+                <div class="mt-5 bg-gray-100 py-6 px-5 rounded-xl">
+                    <p class = "mb-2"> <strong> {{ file.created_by }} </strong> @{{ file.created_at }}</p>
+                    
+
+                    <a href = "{{ file.file.url }}" class='px-1 font-semibold '> Preview </a>
+                </div>
+            {% endfor %}
+        </div>   
+
+        <form method="post" action="{% url 'leads:add_file' lead.id %}" enctype = "multipart/form-data">
+            {% csrf_token %}
+
+            {{ fileform.as_p }}
+
+            <button class="mr-5 mt-5 py-2 px-3 rounded-lg bg-indigo-500 text-white"> Submit </button>
+        </form>
+
 
         <hr class="my-5">
     
