--- a/crmProject/lead/templates/lead/lead_list.html
+++ b/crmProject/lead/templates/lead/lead_list.html
@@ -29,6 +29,9 @@
         {% else %}
             <p class="mt-1 py-2 px-2 text-red-500">There are no leads in the database yet...</p>
         {% endif %}
+        
+        <hr class="my-5">
+        <a href = "{% url 'leads:export' %}" class="mr-5 py-2 px-5 rounded-lg bg-green-500 text-white"> Export Leads</a>
     </div>
     
 {% endblock %}
