--- a/crmProject/core/templates/core/base.html
+++ b/crmProject/core/templates/core/base.html
@@ -9,29 +9,7 @@
   <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    <nav class="py-4 px-10 flex justify-between bg-indigo-400"> 
-        <a href="/" class="text-white text-xl">AhmedCRM</a>
-
-        <div class="space-x-1">
-            <a href="{% url 'about' %}" class="text-lg text-white px-3">About</a>
-            {% if request.user.is_authenticated %}
-                <a href="{% url 'dashboard:index' %}" class="px-3 text-lg text-white">Dashboard</a>
-                <a href="{% url 'clients:list' %}" class="px-3 text-lg text-white">Clients</a>
-                <a href="{% url 'leads:list' %}" class="px-3 text-lg text-white">Leads</a>
-            {% endif %}
-            
-        </div>
-
-        <div class="space-x-1">
-            {% if request.user.is_authenticated %}
-                <a href="{% url 'userprofile:myaccount' %}" class="ml-16 py-2 px-6 bg-indigo-600 rounded-lg text-lg text-white">My Profile</a>
-            {% else %}
-                <a href="{% url 'login' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-lg text-white">Log In</a>
-                <a href="{% url 'userprofile:signup' %}" class="py-2 px-6 bg-indigo-500 rounded-lg text-lg text-white">Sign Up</a>
-            {% endif %}
-            
-        </div>
-    </nav>
+    {% include "core/partials/nav.html" %}
 
     {% if messages %}
         <div class="mt-5 flex items-center justify-center">
@@ -48,8 +26,6 @@
     {% block content %}
     {% endblock %}
 
-    <footer class="py-8 bg-gray-200 text-center">
-        <p class="text-xs">Copyright (c) 20222 - AhmedCRM</p>
-    </footer>
+    {% include "core/partials/footer.html" %}
 </body>
 </html>
