--- a/crmProject/userprofile/templates/userprofile/signup.html
+++ b/crmProject/userprofile/templates/userprofile/signup.html
@@ -5,13 +5,15 @@
 
 
 {% block content %}
-    <h1 class="text-xl">Sign Up</h1>
+    <div class = "py-6 px-6">
+        <h1 class="mb-6 text-xl">Sign Up</h1>
 
-    <form method="post" action=".">
-        {% csrf_token %}
+        <form method="post" action=".">
+            {% csrf_token %}
 
-        {{ form.as_p }}  
-        
-        <button class="py-2 px-6 rounded-lg bg-indigo-500 text-white">Submit</button>
-    </form>    
+            {{ form.as_p }}  
+            
+            <button class="mt-5 py-2 px-6 rounded-lg bg-indigo-500 text-white">Submit</button>
+        </form>  
+    </div>  
 {% endblock %}
